change color of title

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Python-Editor",
-  "productName": "Olster-Editor",
+  "productName": "Python-Editor",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
